# benzema

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
benzema/: constants.py  decoder.py  encoder.py
tests/: test_benzema.py  test_decoding.py  test_encoding.py
